--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,7 @@ Last Updated: 2010-09-17
 Author: Richard Clark - http://richclarkdesign.com
 */
 /*
-kleine wijziging in de assets... moet lukken
+kleine wijziging in de assets... moet lukken v0.6.2
 */
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
